# robot_launch_files

./: CMakeLists.txt  README.md  package.xml
launch/diagnostics/: cpu_monitor.launch  diagnostics.launch  ntp_monitor.launch
launch/essentials/: controller_joystick.launch  joke.launch  record_robocup.launch  rgbd_to_ros.launch  robot_state_publisher.launch  tf_server.launch
launch/gmapping/: gmapping.launch
launch/hardware/: battery_manager.launch  deployer.launch  dynamixels.launch  emergency_button.launch  wait_for_interrupt.ops
launch/interaction/: action_server.launch  mobile_ui_server.launch  picovoice.launch  slack.launch  speech_recognition.launch  telegram.launch  text_to_speech.launch  touchscreen.launch  vizbox.launch
launch/localization/: amcl.launch  gmapping.launch  localization.launch
launch/manipulation/: arm.launch  head.launch  moveit.launch  torso.launch
launch/multirobot/: multimaster.launch  sync_client.launch  sync_server.launch  trigger.launch  world_model_client_bridge.launch  world_model_server_bridge.launch
launch/navigation/: navigation.launch  navigation_gmapping.launch
launch/perception/: tensorflow_object_recognition.launch
launch/record/: record_robocup.launch
launch/simulator/: simulator.launch
launch/tools/: rqt.launch  rviz.launch  video_recorder.launch  vizbox.launch
launch/world_modeling/: handle_locator.launch  image_recognition.launch  people_recognition.launch  reasoner.launch  world_model.launch
script/: bodypart_resetter.py  emoticon_handler  joke.py  rqt.bash  scan_gmapping.py  ssl_dummy  topic_monitor
(+11 files in other folders)
