<?xml version="1.0"?>
<package>
  <name>robot_launch_files</name>
  <version>0.0.0</version>
  <description>The robot_launch_files package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>vizbox</exec_depend>

</package>
